--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "Schedule Attack",
     "short_name": "Attack",
-    "start_url": "index.html",
+    "start_url": "schedule-attack/daily_schedule_reminder.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "88601.png",
+        "src": "schedule-attack/icon.png",
         "sizes": "192x192",
         "type": "image/png"
       }
